# psamvault-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  api_client.py  changelog.py  config.py  crypto.py  main.py  pyproject.toml  requirements.txt  session.py  spinner.py  update_check.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/skills/psamvault-release/: SKILL.md
.github/workflows/: ci.yml
command/: api_key_commands.py  auth_commands.py  browser_commands.py  changelog_command.py  export_command.py  import_command.py  recovery_commands.py  uninstall_command.py  upgrade_command.py  vault_commands.py
dashboard/: __init__.py  routes.py
dashboard/templates/: api_key_detail.html  api_key_edit.html  api_keys_table.html  base.html  dashboard.html  entries_table.html  entry_detail.html  entry_edit.html  login.html
scripts/: release.py
tests/: conftest.py  test_api_client.py  test_browser.py  test_commands.py  test_crypto.py
tui/: app.py  state.py
tui/screens/: dashboard.py  detail.py  login.py
