[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psamvault"
version = "0.5.1"
description = "A secure command-line password vault."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

keywords = ["password", "vault", "cli", "security", "encryption"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pyperclip>=1.9.0",
    "argon2-cffi>=23.1.0",
    "keyring>=25.0.0",
    "playwright>=1.44.0",
    "textual>=1.0.0",
    "flask>=3.0.0",
    "waitress>=3.0.0",
    "flask-session>=0.8.0",
]

[project.scripts]
# This is what registers `psamvault` as a terminal command after pip install
psamvault = "main:app"
pv = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = ""

[project.urls]
Homepage = "https://github.com/psam-717/psamvault-cli"
Repository = "https://github.com/psam-717/psamvault-cli"
Issues = "https://github.com/psam-717/psamvault-cli/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

